<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditDeviceActivity" >

    <!-- Login progress -->
    
   <LinearLayout android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"        
        android:background="@drawable/background">
        
      
	</LinearLayout>

    <!-- Login form -->
  
	<ScrollView android:id="@+id/login_form"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:orientation="vertical"
	    android:paddingLeft="20dip"
	    android:paddingRight="20dip"
	    android:background="@drawable/background"
	    android:scrollbars="none" >
	    
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		    
		    <ImageView android:id="@+id/image_logo_company"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:src="@drawable/ic_company_logo"
				android:adjustViewBounds="true"
				android:contentDescription="@string/company_logo"
				android:layout_marginTop="25dip" />
		    
		    <EditText android:id="@+id/edit_devicename"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/deviceName" 
				android:inputType="textUri"
				android:layout_marginTop="25dip"
				android:padding="4dip"
				android:background="@drawable/edittext_rounded_corners" />  
		    
			<EditText android:id="@+id/edit_host"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/host" 
				android:inputType="textUri"
				android:layout_marginTop="25dip"
				android:padding="4dip"
				android:background="@drawable/edittext_rounded_corners" />        
		    
		    <EditText android:id="@+id/edit_user"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/user"
				android:inputType="text"
				android:layout_marginTop="25dip"
				android:padding="4dip"
				android:background="@drawable/edittext_rounded_corners" />  
		    
		    <EditText android:id="@+id/edit_password"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:hint="@string/password"
				android:inputType="textPassword"
				android:layout_marginTop="25dip"
				android:padding="4dip"
				android:background="@drawable/edittext_rounded_corners" />
		    
		    <Button android:id="@+id/button_accept"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:layout_marginTop="30dip" 
				android:background="@drawable/button_rounded_corners" />			    
		</LinearLayout>
	</ScrollView>
</merge>